Decrease sidebar margin on desktop to prevent the timeline jumping when the sidebar becomes fixed

--- a/CounterspaceWeaponsTimeline/src/scss/layout/_layout.scss
+++ b/CounterspaceWeaponsTimeline/src/scss/layout/_layout.scss
@@ -57,6 +57,7 @@
     display: inline;
     grid-area: sidebar;
     width: rem(297.66px);
+    margin-left: 1rem;
   }
 }
 
